flux/apps/nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: default
spec:
  selector:
    matchLabels:
      app: nextcloud
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      nodeSelector:
        network: fast
      containers:
        - name: nextcloud
          image: nextcloud:34.0.4
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
            limits:
              # memory: 100Mi
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nextcloud
              mountPath: /var/www/html
            - name: nextcloud-files
              mountPath: /files
            - name: nextcloud-media
              mountPath: /media
      securityContext:
        fsGroup: 33
      volumes:
        - name: nextcloud
          nfs:
            server: datasphere
            path: /Root/Volumes/nextcloud
        - name: nextcloud-files
          nfs:
            server: datasphere
            path: /Root/Files
        - name: nextcloud-media
          nfs:
            server: datasphere
            path: /Root/Media
