flux/apps/nextcloud/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: use-hsts
  namespace: default
spec:
  headers:
    stsSeconds: 15552000
    forceSTSHeader: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-local
  namespace: default
spec:
  entryPoints:
    - local
  routes:
    - match: Host(`nc.home`)
      kind: Rule
      services:
        - name: nextcloud
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-web
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nc.arlodev.co.uk`)
      kind: Rule
      services:
        - name: nextcloud
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-websecure
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nc.arlodev.co.uk`)
      kind: Rule
      middlewares:
        - name: use-hsts
          namespace: default
      services:
        - name: nextcloud
          port: 80
  tls:
    secretName: cert-nextcloud
